Prevent text wrap on small widths in viewer2
Channel and user names can be longer than the width that is given to the
viewer. Hence, prevent text wrap.

Collapsing whitespace could also be wanted, is not done though to keep
and display the original name, even with multiple whitespace characters
should they be used.

--- a/viewer2/mview.css
+++ b/viewer2/mview.css
@@ -25,6 +25,7 @@
   padding-left: 14px;
   background: url('img/channel_12.png') no-repeat 0px 0px;
   margin-left:-6px;
+  white-space: pre;
 }
 
 .mv-s .mv-c .mv-c-name {
